# stm32f446-nucleo-template

./: .gitignore  .gitmodules  CMakeLists.txt  STM32F446ZETx_FLASH.ld
cmake/git-info/: GitInfo.cmake
drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_ll_utils.c
src/: main.cpp
tests/: tests.h  tests.txt  tests_config.h
